# sokol-app-template

./: .gitignore  .gitmodules  CMakeLists.txt  Rakefile  compile_flags.txt.in
src/: imgui-metal.cc  osxentry.h  osxentry.mm
